# ClawSafeTest

./: .coverage  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORE_SUMMARY.md  GETTING_STARTED.md  MEMORY_INTEGRATION_SUMMARY.md  POLICY.md  PROVIDERS.md  README.md  RELEASE_NOTES_v0.3.0.md  SECURITY.md  SKILL.md  SOUL.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: common.py  evasion.py  evasion_scenarios.json  harness.py  judge.py  l2_scenarios.json  redteam.py  run_benchmark.py  run_evasion.py  run_l3.py  run_redteam.py  scenarios.json
clawsafe/: __init__.py  full.py  lite.py
clawsafe/core/: __init__.py  agent.py  agent_config.py  agent_guard.py  auth.py  config.py  detection.py  memory_integration.py  memory_security.py  policy.py  policy_generation.py  provider.py  tools.py  validator.py
clawsafe/experimental/: __init__.py  agent.py  policy_generation.py
clawsafe/integrations/: __init__.py  base_adapter.py  crewai_adapter.py  hermes_adapter.py  langchain_adapter.py  openclaw_adapter.py  presets.py
clawsafe/integrations/hermes/: __init__.py  memory_provider.py  plugin.py
clawsafe/integrations/openclaw/: __init__.py  plugin.py
clawsafe/memory/: __init__.py  entry.py  store.py
clawsafe/skills/: __init__.py  base.py  registry.py
clawsafe/skills/builtin/: __init__.py  code_security.py  content_policy.py  input_guard.py  jailbreak.py  output_guard.py  pii_detection.py  pii_leakage.py  prompt_injection.py  rate_limit.py
clawsafe/utils/: __init__.py  jsonx.py  sanitize.py  token_budget.py
docs/: FRAMEWORK_GUIDE.md  Gemfile  _config.yml  architecture.md  comparative-frameworks.md  index.md  patterns.md  preview.html  security-principles.md  showcase.html  threat-modeling.md
docs/_layouts/: default.html
docs/assets/css/: custom.css
docs/features/: policies.md
docs/guides/: configuration.md  getting-started.md  providers.md
examples/: basic_agent_protection.py  integrated_memory_example.py  integrations_example.py  memory_security_example.py
tests/: test_agent_guard.py  test_benchmark.py  test_detection.py  test_evasion_benchmark.py  test_judge.py  test_l2_benchmark.py  test_l3_harness.py  test_lite.py  test_memory.py  test_memory_hardening.py  test_memory_security.py  test_package_structure.py  test_policy.py  test_policy_generation.py  test_providers.py  test_redteam.py  test_runtime_llm_free.py  test_security_hardening.py  test_skills.py  test_skills_extended.py  test_validator_precision.py
tests/integrations/: test_adapters.py  test_hermes.py  test_openclaw.py
