[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawsafe-agent"
version = "0.4.0"
description = "Agent Security Framework - Protect tool execution, prevent unauthorized actions, detect anomalies. Works with OpenClaw, Hermes, LangChain, CrewAI."
authors = [{ name = "akafengfeng", email = "fengfeng.wf@gmail.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "security",
    "agent",
    "tool-protection",
    "authorization",
    "openclaw",
    "hermes",
    "langchain",
    "crewai",
    "command-injection",
    "prompt-injection",
    "audit-logging",
    "anomaly-detection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
# The base install is the zero-dependency lite tier. LLM provider SDKs
# live behind the "full" extra so users select what they load.
dependencies = []

[project.optional-dependencies]
full = [
    "anthropic>=0.30.0",
]
providers = [
    "anthropic>=0.30.0",
]
dev = [
    "anthropic>=0.30.0",
    "pytest>=8",
    "pytest-cov>=6",
    "black>=24",
    "ruff>=0.6",
    "mypy>=1.11",
]
docs = [
    "sphinx>=8",
    "sphinx-rtd-theme>=2",
]

# Hermes Agent discovers plugins via this entry point group.
[project.entry-points."hermes.plugins"]
clawsafe = "clawsafe.integrations.hermes"

[project.urls]
Homepage = "https://github.com/akafengfeng/ClawSafeTest"
Repository = "https://github.com/akafengfeng/ClawSafeTest"
Documentation = "https://github.com/akafengfeng/ClawSafeTest#readme"
Issues = "https://github.com/akafengfeng/ClawSafeTest/issues"
Changelog = "https://github.com/akafengfeng/ClawSafeTest/releases"

# Code quality tools configuration
[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "RUF"]
# E501: line length is handled by black.
# UP042: str+Enum mixin is intentional — enum values serialize as plain
# strings in the audit log and JSON payloads.
ignore = ["E501", "UP042"]

[tool.ruff.lint.isort]
known-first-party = ["clawsafe"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=clawsafe --cov-report=term-missing --cov-report=html"
minversion = "8"
